postionnment correct header en version tablette

--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ footer .assistance-footer {
   /**** HEADER ******/
 
   header {
-    padding-left: 50px;
+    padding-left: 0px;
   }
 
   nav ul {
@@ -890,6 +890,7 @@ footer .assistance-footer {
   .activites-a-marseille {
     padding: 0;
     margin: 0;
+    margin-top: 40px;
     width: 100%;
   }
 
